[package]
name = "clauden"
version = "0.1.0"
edition = "2021"
description = "Multi-account Claude OAuth rotating proxy — never hit a rate limit again"
license = "MIT"

[lib]
name = "clauden"
path = "src/lib.rs"

[[bin]]
name = "clauden"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
webbrowser = "1"
dirs = "5"
anyhow = "1"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true
